--- a/Projet_final_de_fin_de_formation/src/globals.css
+++ b/Projet_final_de_fin_de_formation/src/globals.css
@@ -1,16 +1,42 @@
-.div1 {
-    position: relative;
-    width: 300px;
-    height: 400px;
-    overflow: hidden;
-    
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.div1 img {
+.imagebasecontainer {
+    position: relative;
+    text-align: center;
+    width: 1000px;
+    height: 600px;
+}
+
+.imagebasecontainer h2 {
+    color: blue;
+    text-shadow: 2px 2px 2px black;
+    font-size: 44px;
+    margin: 0;
+}
+
+.imagebasecontainer h4 {
+    color: blue;
+    text-shadow: 1px 1px 1px black;
+    font-size: 24px;
+    margin: 0;
+}
+
+.div1, .div2, .div3 {
+    position: relative;
+    display: inline-block;
+    width: 30%;
+    height: 400px;
+    overflow: hidden;
+}
+
+.div1 img, .div2 img, .div3 img  {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
 }
 
 .div1::before {
@@ -20,5 +46,15 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0) 50%, white 72%);
+    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0) 60%, white 72%);
+  }
+
+  .div3::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0) 60%, white 72%);
   }
