--- a/Projet_final_de_fin_de_formation/src/globals.css
+++ b/Projet_final_de_fin_de_formation/src/globals.css
@@ -1,14 +1,19 @@
 body {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: auto;
+    margin: 0;
 }
 
 .imagebasecontainer {
     position: relative;
     text-align: center;
-    width: 1000px;
+    width: 100%;
+    max-width: 1000px;
     height: 600px;
+    margin-top: 50px;
 }
 
 .imagebasecontainer h2 {
@@ -23,11 +28,13 @@ body {
     text-shadow: 1px 1px 1px black;
     font-size: 24px;
     margin: 0;
+    margin-bottom: 20px;
 }
 
 .div1, .div2, .div3 {
     position: relative;
     display: inline-block;
+    
     width: 30%;
     height: 400px;
     overflow: hidden;
@@ -57,4 +64,92 @@ body {
     bottom: 0;
     left: 0;
     background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0) 60%, white 72%);
+  }
+
+  .popularcontainer {
+    width: 100%;
+  }
+
+  .ventespop {
+    font-size: 36px;
+    text-align: center;
+    color: darkblue;
+    text-shadow: 1px 1px 5px lightblue;
+    background:-moz-radial-gradient(circle, rgb(138, 253, 253), rgb(157, 83, 253));
+    border-radius: 50px;
+    margin: 0 400px 40px 400px;
+    padding: 20px 0 20px 0;
+  }
+
+  .popular {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    max-height: 400px;
+    justify-content: space-evenly;
+  }
+
+  .imgpopular {
+    width: 90%;
+    max-height: 300px;
+    
+  }
+
+  .lineargrad {
+    width: 100%;
+    background: linear-gradient(to top, #46666e, rgb(255, 255, 255));
+  }
+
+  .pop1, .pop2, .pop3, .pop4 {
+    width: 18%;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    text-align:justify;
+    border: 1px black solid;
+    background: linear-gradient(to bottom, #57696e, #e7e2e2);
+    margin: 10px;
+    padding: 20px;
+  }
+
+  .blackline {
+    height: 140px;
+    max-width: 250px;
+    margin: -40px;
+  }
+
+  .detailaccueil {
+    width: 100%;
+    margin-top: 10px;
+    border:5px solid rgb(80, 76, 76);
+    border-radius: 80% 30px / 80% 30px;
+  }
+  
+  .detailaccueil:hover {
+    border: 5px solid blue;
+    background-color: rgb(96, 172, 172);
+  }
+
+  .quatreinfoscontainer {
+    display: flex;
+    margin-top: 100px;
+  }
+
+  .quatreinfos {
+    max-width: 200px;
+    height: 100px;
+    border: 3px solid gray;
+    border-radius: 30px;
+  }
+
+  .infoscontainer {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+  }
+
+  .infoscontainer div {
+    text-align: justify;
+    padding: 10px 10% 10px 10%;
+    color: white;
   }
