--- a/Projet_final_de_fin_de_formation/src/globals.css
+++ b/Projet_final_de_fin_de_formation/src/globals.css
@@ -1,10 +1,8 @@
-body {
+.accueilbody {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: auto;
-    margin: 0;
 }
 
 .imagebasecontainer {
