--- a/Projet_final_de_fin_de_formation/src/globals.css
+++ b/Projet_final_de_fin_de_formation/src/globals.css
@@ -108,14 +108,15 @@ body {
     text-align:justify;
     border: 1px black solid;
     background: linear-gradient(to bottom, #57696e, #e7e2e2);
-    margin: 10px;
     padding: 20px;
+    margin-bottom: -50px;
   }
 
   .blackline {
     height: 140px;
     max-width: 250px;
-    margin: -40px;
+    max-width: 90%;
+    margin: -20px;
   }
 
   .detailaccueil {
